--- a/Path to Singularity/Base.lproj/Main.storyboard
+++ b/Path to Singularity/Base.lproj/Main.storyboard
@@ -29,13 +29,13 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="100" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ReW-bq-cEc">
-                                        <rect key="frame" x="51" y="10" width="32.5" height="21"/>
+                                        <rect key="frame" x="53" y="10" width="32.5" height="21"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                                         <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="7mA-DK-4Q8">
-                                        <rect key="frame" x="55" y="56.5" width="177" height="6"/>
+                                        <rect key="frame" x="55" y="56.5" width="171" height="6"/>
                                         <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="6" id="EuW-Tl-g5k"/>
@@ -48,15 +48,15 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
-                                <color key="backgroundColor" red="0.057540060109999999" green="0.044502087310000001" blue="0.1643843217" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <color key="backgroundColor" red="0.1638671220216231" green="0.0" blue="0.45104356245561084" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 <constraints>
                                     <constraint firstItem="NKh-3g-uGR" firstAttribute="leading" secondItem="FeQ-J6-7z4" secondAttribute="leading" constant="16" id="2tP-b5-LWa"/>
                                     <constraint firstAttribute="bottom" secondItem="NKh-3g-uGR" secondAttribute="bottom" constant="10" id="9FJ-Eg-DDS"/>
-                                    <constraint firstAttribute="trailing" secondItem="7mA-DK-4Q8" secondAttribute="trailing" constant="8" id="CJD-X8-V9h"/>
+                                    <constraint firstAttribute="trailing" secondItem="7mA-DK-4Q8" secondAttribute="trailing" constant="14" id="CJD-X8-V9h"/>
                                     <constraint firstItem="0IN-iH-uDM" firstAttribute="leading" secondItem="FeQ-J6-7z4" secondAttribute="leading" constant="16" id="DuO-nJ-VzF"/>
                                     <constraint firstItem="ReW-bq-cEc" firstAttribute="centerY" secondItem="0IN-iH-uDM" secondAttribute="centerY" id="OWB-Fm-xPV"/>
                                     <constraint firstItem="7mA-DK-4Q8" firstAttribute="leading" secondItem="NKh-3g-uGR" secondAttribute="trailing" constant="16" id="QJm-9z-bNF"/>
-                                    <constraint firstItem="ReW-bq-cEc" firstAttribute="leading" secondItem="0IN-iH-uDM" secondAttribute="trailing" constant="12" id="bY6-p5-AyI"/>
+                                    <constraint firstItem="ReW-bq-cEc" firstAttribute="leading" secondItem="0IN-iH-uDM" secondAttribute="trailing" constant="14" id="bY6-p5-AyI"/>
                                     <constraint firstAttribute="height" constant="80" id="ete-82-T6I"/>
                                     <constraint firstItem="0IN-iH-uDM" firstAttribute="top" secondItem="FeQ-J6-7z4" secondAttribute="top" constant="10" id="lGe-yj-0JR"/>
                                     <constraint firstItem="7mA-DK-4Q8" firstAttribute="centerY" secondItem="NKh-3g-uGR" secondAttribute="centerY" id="p7B-8Z-RVE"/>
@@ -124,7 +124,7 @@
                             </view>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="ZLx-fj-G7a"/>
-                        <color key="backgroundColor" red="0.057540060114832814" green="0.044502087314103246" blue="0.16438432173295459" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <color key="backgroundColor" red="0.163867122" green="0.0" blue="0.45104356249999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
                             <constraint firstItem="ZLx-fj-G7a" firstAttribute="trailing" secondItem="Vei-eB-wwb" secondAttribute="trailing" id="Jh4-Wp-tqf"/>
                             <constraint firstItem="ZLx-fj-G7a" firstAttribute="bottom" secondItem="1D4-h5-rSK" secondAttribute="bottom" id="MDn-d9-G7H"/>
